[gd_scene load_steps=6 format=3 uid="uid://dnrotuaj6yba"]

[ext_resource type="Script" path="res://level.gd" id="1_2jtfs"]

[sub_resource type="NavigationMesh" id="NavigationMesh_h8hxj"]
vertices = PackedVector3Array(-11, -0.098362, -1, -10, -0.098362, -1.25, -2.75, -0.098362, -8, -2.75, -0.098362, -9.5, -12.5, -0.098362, -24, -24, -0.098362, -18, -24, -0.098362, -11.75, -12.5, -0.098362, -24, -24, -0.098362, -24, -24, -0.098362, -18, -24, -0.098362, 0.5, -12.25, -0.098362, 0.5, -11, -0.098362, -1, -24, -0.098362, -5.75, -2, -0.098362, -10.25, -0.5, -0.098362, -10.25, -0.75, -0.098362, -24, -24, -0.098362, -11.75, -24, -0.098362, -5.75, -11, -0.098362, -1, -2.75, -0.098362, -9.5, -0.75, -0.098362, -24, -12.5, -0.098362, -24, -2.75, -0.098362, -9.5, -2, -0.098362, -10.25, -0.75, -0.098362, -24, 2.5, -0.098362, -10.5, 2.5, -0.098362, -24, -0.75, -0.098362, -24, -0.5, -0.098362, -10.25, 24, -0.098362, -16.5, 24, -0.098362, -24, 13.25, -0.098362, -24, 2.5, -0.098362, -24, 2.5, -0.098362, -10.5, 3.5, -0.098362, -9.75, 13.25, -0.098362, -24, 13.25, -0.098362, -24, 3.5, -0.098362, -9.75, 3.5, -0.098362, -8.75, 24, -0.098362, -8.75, 24, -0.098362, -16.5, -9, -0.098362, -0.5, -6.25, -0.098362, 4, -5.5, -0.098362, 4.5, -2, -0.098362, -7, -2.75, -0.098362, -8, -10, -0.098362, -1.25, -9, -0.098362, -0.5, -2, -0.098362, -7, 3.5, -0.098362, -8, 2.5, -0.098362, -7, -5.5, -0.098362, 5.5, 24, -0.098362, 5.5, 24, -0.098362, -1.75, 24, -0.098362, -8.75, 3.5, -0.098362, -8.75, 3.5, -0.098362, -8, 24, -0.098362, -1.75, -2, -0.098362, -7, -5.5, -0.098362, 4.5, -5.5, -0.098362, 5.5, 2.5, -0.098362, -7, -24, -0.098362, 12.25, -24, -0.098362, 24, -15.75, -0.098362, 24, -9, -0.098362, 5.75, -12.25, -0.098362, 0.5, -24, -0.098362, 0.5, -9, -0.098362, 5.75, -24, -0.098362, 0.5, -24, -0.098362, 12.25, -15.75, -0.098362, 24, -7.25, -0.098362, 24, -7.25, -0.098362, 7, 16, -0.098362, 24, 24, -0.098362, 24, 24, -0.098362, 14.75, 8.25, -0.098362, 24, 16, -0.098362, 24, 24, -0.098362, 14.75, -5.5, -0.098362, 5.5, -7.25, -0.098362, 7, -7.25, -0.098362, 24, 0.5, -0.098362, 24, -5.5, -0.098362, 5.5, 0.5, -0.098362, 24, 8.25, -0.098362, 24, 24, -0.098362, 14.75, 24, -0.098362, 5.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(6, 5, 4), PackedInt32Array(9, 8, 7), PackedInt32Array(11, 10, 12), PackedInt32Array(12, 10, 13), PackedInt32Array(16, 15, 14), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(20, 17, 22), PackedInt32Array(20, 22, 21), PackedInt32Array(25, 24, 23), PackedInt32Array(26, 29, 27), PackedInt32Array(27, 29, 28), PackedInt32Array(32, 31, 30), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 41), PackedInt32Array(39, 41, 40), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(49, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 54), PackedInt32Array(52, 54, 53), PackedInt32Array(56, 55, 57), PackedInt32Array(57, 55, 58), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 62), PackedInt32Array(65, 64, 63), PackedInt32Array(66, 68, 67), PackedInt32Array(69, 74, 70), PackedInt32Array(70, 74, 71), PackedInt32Array(71, 74, 72), PackedInt32Array(72, 74, 73), PackedInt32Array(77, 76, 75), PackedInt32Array(80, 79, 78), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 84), PackedInt32Array(86, 85, 87), PackedInt32Array(87, 85, 88), PackedInt32Array(88, 85, 89)]
agent_radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_jomft"]
size = Vector3(50, 1, 50)

[sub_resource type="BoxMesh" id="BoxMesh_wrls5"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_544fh"]
albedo_color = Color(0.886275, 0.654902, 0.25098, 1)

[node name="Level" type="Node3D"]
script = ExtResource("1_2jtfs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 27.9985, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.287076, 0.957908, 0, -0.957908, 0.287076, 0, 14.1479, 9.58816)
fov = 100.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_h8hxj")

[node name="Ground" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Ground"]
shape = SubResource("BoxShape3D_jomft")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Ground"]
mesh = SubResource("BoxMesh_wrls5")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(-3.61751, 0, 0.856019, 0, 3.15353, 0, -5.24075, 0, -0.590881, -8.824, 1.49962, 2.886)
use_collision = true
collision_mask = 0
size = Vector3(1, 0.893183, 1)
material = SubResource("StandardMaterial3D_544fh")

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(-12.1583, 0, -0.0182114, 0, 1.24815, 0, 0.207129, 0, -1.069, 0.343, 0.0924337, -8.738)
use_collision = true
collision_mask = 0
material = SubResource("StandardMaterial3D_544fh")

[node name="PlayersSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 5

[node name="EnemiesSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://enemy.tscn")
spawn_path = NodePath("../Enemies")
spawn_limit = 20

[node name="Enemies" type="Node" parent="."]

[node name="Players" type="Node" parent="."]

[node name="PlayerSpawnPoint" type="Node3D" parent="."]

[node name="0" type="Node3D" parent="PlayerSpawnPoint" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.154, 0, 7.114)

[node name="1" type="Node3D" parent="PlayerSpawnPoint" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.477, 0, 6.05)

[node name="2" type="Node3D" parent="PlayerSpawnPoint" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.92, 0, -1.643)

[node name="3" type="Node3D" parent="PlayerSpawnPoint" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.995, 0, 2.919)

[node name="4" type="Node3D" parent="PlayerSpawnPoint" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.8556, 0, 3.87449)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EnemiesSpawnPoint" type="Node3D" parent="."]

[node name="0" type="Node3D" parent="EnemiesSpawnPoint" groups=["EnemySpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.154, 0, -5.26095)

[node name="1" type="Node3D" parent="EnemiesSpawnPoint" groups=["EnemySpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.89333, 0, 17.1507)

[node name="2" type="Node3D" parent="EnemiesSpawnPoint" groups=["EnemySpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0504, 0, 9.28476)

[node name="3" type="Node3D" parent="EnemiesSpawnPoint" groups=["EnemySpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54978, 0, -11.9955)

[node name="4" type="Node3D" parent="EnemiesSpawnPoint" groups=["EnemySpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.77036, 0, -14.4587)

[connection signal="spawned" from="PlayersSpawner" to="." method="_on_players_spawner_spawned"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
